--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;900&display=swap"
     rel="stylesheet">
+
+    <script id="react-dotenv" src="./env.js"></script>  
   <title>React App</title>
 </head>
 
